--- a/platform/uboot/android.config
+++ b/platform/uboot/android.config
@@ -1,18 +1,26 @@
-#  KEEP ALPHABETICALLY SORTED
-# CONFIG_USB_EHCI_HCD is not set
-# CONFIG_USB_OHCI_HCD is not set
+# CONFIG_VIDEO_DE2 is not set
 # CONFIG_VIDEO_DT_SIMPLEFB is not set
 # CONFIG_VIDEO_SUNXI is not set
-# CONFIG_VIDEO_DE2 is not set
+#  KEEP ALPHABETICALLY SORTED
+
 CONFIG_ANDROID_BOOT_IMAGE=y
 CONFIG_BOOTCOMMAND="setenv scriptaddr 0x53000000 && load mmc ${mmc_bootdev}:2 ${scriptaddr} boot.scr && source ${scriptaddr}"
-CONFIG_CMD_BCB=y
 CONFIG_CMD_ABOOTIMG=y
 CONFIG_CMD_ADTIMG=y
-CONFIG_UDP_FUNCTION_FASTBOOT=y
+CONFIG_CMD_BCB=y
 CONFIG_CMD_FASTBOOT=y
-CONFIG_FASTBOOT_CMD_OEM_FORMAT=y
 CONFIG_CMD_PART=y
+CONFIG_FASTBOOT_CMD_OEM_FORMAT=y
+CONFIG_FASTBOOT_FLASH_MMC_DEV=0
+CONFIG_G_DNL_MANUFACTURER="Allwinner Technology"
+CONFIG_G_DNL_PRODUCT_NUM=0x1010
+CONFIG_G_DNL_VENDOR_NUM=0x1f3a
 CONFIG_LZ4=y
 CONFIG_RANDOM_UUID=y
 CONFIG_TFTP_BLOCKSIZE=1468
+CONFIG_USB_EHCI_HCD=y
+CONFIG_USB_FUNCTION_FASTBOOT=y
+CONFIG_USB_GADGET_DOWNLOAD=y
+CONFIG_USB_MUSB_GADGET=y
+CONFIG_USB_MUSB_PIO_ONLY=y
+CONFIG_USB_OHCI_HCD=y
