--- a/common/ueventd.common.rc
+++ b/common/ueventd.common.rc
@@ -13,3 +13,7 @@ modalias_handling enabled
 /dev/block/platform/soc/1c0f000.mmc/by-name/userdata   0600    system       system
 /dev/rfkill                                            0660    bluetooth    net_bt
 /dev/ion                                               0664    system       system
+/dev/iio:device0                                       0660    system       system
+/dev/iio:device1                                       0660    system       system
+/dev/iio:device2                                       0660    system       system
+/dev/iio:device3                                       0660    system       system
